# bit-sweeper

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
core/: CMakeLists.txt
core/src/bit-sweep/: bit-sweep-internal.h  bit-sweep.c  bit-sweep.h
core/src/bit-sweep/allocator/: bit-sweep-allocator.c  bit-sweep-allocator.h
core/src/bit-sweep/printer/: bit-sweep-printer.c  bit-sweep-printer.h
core/src/cell/: cell.c  cell.h
core/src/utils/: mersenne-twister.c  safe-memory.c
core/test/src/: main.tests.c
core/test/src/bit-sweep/: bit-sweep.tests.c  bit-sweep.tests.h
core/test/src/cell/: cell.tests.c  cell.tests.h
src/core/: CMakeLists.txt
src/core/src/: sample.c  sample.h
src/core/src/bit-sweep/: bit-sweep-internal.h  bit-sweep.c  bit-sweep.h
src/core/src/bit-sweep/allocator/: bit-sweep-allocator.c  bit-sweep-allocator.h
src/core/src/bit-sweep/printer/: bit-sweep-printer.c  bit-sweep-printer.h
src/core/src/cell/: cell.c  cell.h
src/core/test/: CMakeLists.txt
src/core/test/src/: main.tests.c
src/core/test/src/bit-sweep/: bit-sweep.tests.c
src/core/test/src/cell/: cell.tests.c  cell.tests.h
src/ui/: CMakeLists.txt
src/ui/src/: config.h  main.c  widget.c  widget.h
src/ui/src/widget/bit-sweep/: bit-sweep-widget.c  bit-sweep-widget.h
src/ui/src/widget/cell/: cell-widget.c  cell-widget.h
src/ui/test/: CMakeLists.txt
src/ui/test/src/: main.tests.c
src/ui/test/src/widget/: widget.tests.c  widget.tests.h
ui/: CMakeLists.txt
ui/src/: config.h  main.c
ui/src/widget/bit-sweep/: bit-sweep-widget.c  bit-sweep-widget.h
ui/src/widget/cell/: cell-widget.c  cell-widget.h
